--- a/kafkaconnector_tools/pom.xml
+++ b/kafkaconnector_tools/pom.xml
@@ -73,6 +73,12 @@
             <artifactId>slf4j-api</artifactId>
             <version>2.0.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+        <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-math3</artifactId>
+          <version>3.6.1</version>
+        </dependency>
     </dependencies>
 
 </project>
