add ConfluentClient and same statistics as lltt

--- a/kafkaconnector_tools/pom.xml
+++ b/kafkaconnector_tools/pom.xml
@@ -34,7 +34,7 @@
               </execution>
             </executions>
             <configuration>
-              <mainClass>com.lightstreamer.LightstreamerConsumer</mainClass>
+              <mainClass>com.lightstreamer.ConfluentClient</mainClass>
             </configuration>
           </plugin>
         </plugins>
