--- a/kafkaconnector_tools/pom.xml
+++ b/kafkaconnector_tools/pom.xml
@@ -88,6 +88,12 @@
             <artifactId>log4j-core</artifactId>
             <version>2.17.2</version>
         </dependency>
+        <dependency>
+          <groupId>io.confluent</groupId>
+          <artifactId>kafka-json-serializer</artifactId>
+          <version>7.5.0</version>
+          <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
